Tue Feb 26 18:47:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_add_mnemonic): Append
	mnemonics rather than prepending them so that the 
	order is typically forward rather than typically
	backward. (Partial fix for #52395)

Wed Feb 27 00:45:39 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkarrow.c, gtk/gtkmenuitem.c, gtk/gtkrange.c
	gtk/gtkspinbutton.c gtk/gtkstyle.c: Draw arrows better (without
	extra baseline)

Tue Feb 26 18:38:17 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_refetch): 
	Display any "g_unicode_isgraph()" char literally,
	not just latin1. (#65679)

Tue Feb 26 18:01:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_grab_focus): Don't
	focus insensitive widgets. (#68203)
	
	* gtk/gtkentry.c (gtk_entry_state_changed): Clear any
	current selection if we become insensitive. (#68203)

	* gtk/gtkentry.c (gtk_entry_grab_focus): Don't
	select the text if the entry isn't editable. (#67203)

	* gtk/gtkentry.c: Activate keybindings when not editable,
	but supress keybindings that change the text. (#65848, #68203)

	* gtk/gtkentry.c (gtk_entry_set_property): Reset the
	IM context for the entry when it is made not editable.

Tue Feb 26 17:04:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c (update_color): Emit ::color_changed
	every time we notify current_color. (Brute force 
	fix for #72470, Matthias Clasen). Some fixes to improve
	reentrancy.

Tue Feb 26 15:04:33 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_enter_text): use
	the cursor position _after_ deleting the text
	as the position to insert at. (#72717, Jan Mynarik)

2002-02-26 Vitaly Tishkov <tvv@sparc.spb.su>

        * gtk/gtktreemodel.c
	misprints in documentation for gtk_tree_row_reference_inserted() 
        and gtk_tree_path_new () are fixed

Tue Feb 26 19:47:16 2002  Kristian Rietveld  <kris@gtk.org>
